Bug 207797 - when restart kstars after hiding tools panel, they are not hidden
Summary: when restart kstars after hiding tools panel, they are not hidden
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alexey Khudiakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-18 16:01 UTC by Fabien
Modified: 2010-02-21 20:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The toolbars are set checked by default.Applying this patch on kstars.cpp will resolve it. (1.09 KB, patch)
2010-01-24 02:55 UTC, devi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fabien 2009-09-18 16:01:22 UTC
Version:            (using KDE 4.3.1)
OS:                Linux
Installed from:    Ubuntu Packages

There is no way to hide the tools panel, when I uncheck them in the
menu, they are hided but when I restart KStarts, they came back.
Comment 1 Lukas 2009-10-15 23:10:03 UTC
can confirm with kstars 1.5.3, KDE 4.3.2 on Fedora 11
Comment 2 devi 2010-01-24 02:55:38 UTC
Created attachment 40181 [details]
The toolbars are set checked by default.Applying this patch on kstars.cpp will resolve it.
Comment 3 Alexey Khudiakov 2010-01-31 15:15:02 UTC
SVN commit 1083013 by khudyakov:

* Remove options Show{Main,View}Toolbar. It turn out that toolbars
have their own facilities to preserve state between program runs and
these options interfere. This should resolve bug 20797.

It's based on Sruthi Devi's patch.

CCMAIL: kstars-devel@kde.org
CCBUG: 207797

 M  +0 -2      kstars.cpp  
 M  +0 -10     kstars.kcfg  
 M  +4 -4      kstarsactions.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1083013
Comment 4 Alexey Khudiakov 2010-02-03 13:52:32 UTC
Status bar is affected by this bug too.
Comment 5 Alexey Khudiakov 2010-02-21 20:51:58 UTC
SVN commit 1093963 by khudyakov:

Set visibility of status bar from options.

Also remove unused include

BUG: 207797

 M  +2 -1      kstars.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093963