Set visibility of status bar from options.

Also remove unused include

BUG: 207797

svn path=/trunk/KDE/kdeedu/kstars/; revision=1093963